# myagent

./: .gitignore  Cargo.toml  Makefile  config.example.yaml  myagent.yaml  plan.md  test.yaml  todo.md
.github/prompts/: review-and-fix.prompt.md
src/: client.rs  config.rs  flow.rs  logging.rs  main.rs  tui.rs  types.rs  valid_path.rs
src/tools/: create_file.rs  custom_tools.rs  delete_file.rs  edit_file.rs  git.rs  grep.rs  list_dir.rs  mod.rs  multi_select.rs  read_file.rs  registry.rs  remove_dir.rs
