[package]
name = "myagent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
async-openai = { version = "0.34.0", features = ["chat-completion", "chat-completion-types", "_api"] }
ratatui = "0.30"
crossterm = "0.29.0"
tokio = { version = "1.35", features = ["full"] }
regex = "1.10"
anyhow = "1.0"
minijinja = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
globwalk = "0.9"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.10"
